[package]
edition = "2018"
name = "archives-of-monad"
version = "0.2.0"
[dependencies]
convert_case = "*"
itertools = "*"
lazy_static = "^1"
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "*"
meilisearch-sdk = "*"
futures = "*"
strum = { version = "*", features = ["derive"] }
