[package]
edition = "2021"
name = "archives-of-monad"
version = "0.3.1"
[dependencies]
convert_case = "*"
itertools = "*"
lazy_static = "^1"
regex = "^1"
serde = { version = "^1", features = ["derive"] }
serde_json = "^1"
serde_repr = "*"
meilisearch-sdk = { version = "*", default_features = false }
futures = { version = "*", default_features = false, features = ["executor"] }
strum = { version = "*", features = ["derive"] }

[dev-dependencies]
pretty_assertions = "^1"
